# rrt

./: .gitignore  .proxyrc.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  vercel.json  webpack.config.js
crates/rrt/: Cargo.toml
crates/rrt-wasm/: Cargo.toml
crates/rrt-wasm/src/: image.rs  lib.rs  utils.rs
crates/rrt/examples/: empty.rs  scene1.rs  scene2.rs
crates/rrt/src/: engine.rs  io.rs  scene.rs  utils.rs  vec3.rs
examples/: main.rs
frontend/: index.html  index.js  styles.css  wasm-worker.js
rrt-core/: Cargo.toml
rrt-core/examples/: empty.rs  scene1.rs  scene2.rs  scene3.rs
rrt-core/src/: camera.rs  engine.rs  lib.rs  scene.rs  vec3.rs
rrt-frontend/: index.html  index.js  styles.css
rrt-wasm/: Cargo.toml
rrt-wasm/src/: image.rs
src/: camera.rs  color.rs  engine.rs  hitrecord.rs  io.rs  lib.rs  material.rs  object.rs  point.rs  ray.rs  scene.rs  shape.rs  utils.rs  vec3.rs
src/material/: lambertian.rs
src/shape/: sphere.rs
