[package]
name = "rrt-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Jay Mody <jaykmody@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rrt = { path = "../rrt" }

console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3.63"

# see https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
