[package]
name = "rrt-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Jay Mody <jaykmody@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rrt = { path = "../rrt" }
wasm-bindgen = "0.2"
rayon = "1.7.0"
wasm-bindgen-rayon = "1.0.3"
js-sys = "0.3.63"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
